--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 
+/* css to assure images are responsive */
+.responsive {
+  width: 100%;
+  height: auto;
+}
+
+
 /* css for top navigation*/
 /* this inline styling did npot work, neither this css */
 
@@ -179,138 +186,26 @@ header:hover .owl-next {
 }
 
 
+/*css for simple footer - with flex */
 
-
-
-
-
-
-/* COMPLEX FOOTER */
-
-/* css for  refractoring to complexfooter  */
- {
-    box-sizing: border-box;
-    font-family: ’Lato’, sans-serif;
-    margin: 0; 
-    padding: 0;
-}
-ul {
-    list-style: none;
-    padding-left: 0;
-}
-footer {
-    background-color: goldenrod;
-    color: #bbb;
-    line-height: 1.5;
-}
-footer a {
-    text-decoration: none;
-    color: #eee;
-}
-a:hover {
-    text-decoration: underline;
-}
-.ft-title {
-    color: darkred;
-    font-family: ’Merriweather’, serif;
-    font-size: 1.375rem;
-    padding-bottom: 0.625rem;
+.footerFlex {
+  min-height:50px;
+  border: 3px solid #dim lightgray;
+  padding: 10px;
+  background: goldenrod;
+  display: flex;
 }
 
-/*custom add subscribe declaration*/
-h4 {
-    color: darkred;
-    font-family: ’Merriweather’, serif;
-    font-size: 1.375rem;
-    padding-bottom: 0.625rem;
+.footerNav {
+  border: 3px solid #fff;
+  padding: 5px;
+  min-height: 50px;
+  flex-grow: 1;
 }
 
-
-
-/* css for line up positionig */
-.ft-main {
-    padding: 1.25rem 1.875rem;
-    display: flex;
-    flex-wrap: wrap;
-}
-.ft-main-item {
-    padding: 1.25rem;
-    min-width: 12.5rem /*200px*/;
+.nf {
+  color: black;
+  text-align: center;
 }
 
-/* css for (sticky footer) position footer at bottom */
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
-.container {
-    flex: 1;    /* same as flex-grow: 1; */
-}
-
-/* css for screen size optimization (boroughed) */
-@media only screen and (min-width: 29.8125rem /*477px*/) {
-    .ft-main {
-        justify-content: space-around;
-    }
-}
-@media only screen and (min-width: 77.5rem /*1240px*/ ) {
-    .ft-main {
-        justify-content: space-evenly;
-    }
-}
-
-/* css for styling newsletter */
-
-form {
-    display: flex;
-    flex-wrap: wrap;
-}
-input[type="email"] {
-    border: 0;
-    padding: 0.625rem;
-    margin-top: 0.3125rem;
-}
-input[type="submit"] {
-    background-color: #00d188;
-    color: #fff;
-    cursor: pointer;
-    border: 0;
-    padding: 0.625rem 0.9375rem;
-    margin-top: 0.3125rem;
-}
-
-/* css for socials */
-.ft-social {
-    padding: 0 1.875rem 1.25rem;
-}
-.ft-social-list {
-    display: flex;
-    justify-content: center;
-    border-top: 1px #777 solid; 
-    padding-top: 1.25rem;
-}
-.ft-social-list li {
-    margin: 0.5rem;
-    font-size: 1.25rem;
-}
-
-/* css for legal (simplify)vvin metallic gold*/
-.ft-legal {
-    padding: 0.9375rem 1.875rem;
-    background-color: #D4AF37;
-}
-.ft-legal-list {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-}
-.ft-legal-list li {
-    margin: 0.125rem 0.625rem;
-    white-space: nowrap;
-}
-/* one before the last child */
-.ft-legal-list li:nth-last-child(2) {
-    flex: 1;       /* same as flex-grow: 1; */
-}
 
