--- a/css/style.css
+++ b/css/style.css
@@ -187,12 +187,12 @@ header:hover .owl-next {
 
 
 /*css for simple footer - with flex */
+/* note to self --- conflict with background property : background: goldenrod; */
 
 .footerFlex {
   min-height:50px;
   border: 3px solid #dim lightgray;
   padding: 10px;
-  
   display: flex;
 }
 
@@ -206,6 +206,7 @@ header:hover .owl-next {
 .nf {
   color: black;
   text-align: center;
+  background-color: goldenrod;
 }
 
 
