--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,9 @@ h2.topic {
 }
 
 p.primary {
-  text-align: center;
   font-weight: bold;
+  text-align: center;
+  color: red;
 }
 
 p.testimonial {
